gcc/testsuite/obj-c++.dg/proto-error-1.mm
// PR obj-c++/28434
// { dg-do compile }

Class<> c;  // { dg-error "identifier" }
